# inotify-tools

./: .cirrus.yml  .clang-format  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  COPYING  Cargo.toml  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  build_and_test.sh  build_and_test_multi.sh  configure.ac  rh_build.sh  sonar-project.properties  upload_api_docs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ccpp.yml  codeql.yml  issues.yml  shellcheck.yml
inotifytools/: Cargo.toml
inotifytools/src/: error.rs  event.rs  format.rs  lib.rs  stats.rs  watch.rs
inotifywait/: Cargo.toml
inotifywait/src/: main.rs
inotifywatch/: Cargo.toml
inotifywatch/src/: main.rs
libinotifytools/.svn/: all-wcprops  entries
libinotifytools/.svn/text-base/: Makefile.am.svn-base
libinotifytools/src/: .gitignore  Doxyfile  Makefile.am  example.cpp  inotifytools.c  inotifytools.cpp  inotifytools_p.h  redblack.c  redblack.cpp  redblack.h  stats.c  stats.cpp  stats.h  test.c  test.cpp
libinotifytools/src/.svn/: all-wcprops  entries
libinotifytools/src/.svn/text-base/: Doxyfile.svn-base  Makefile.am.svn-base  redblack.c.svn-base  redblack.h.svn-base  test.c.svn-base
libinotifytools/src/inotifytools/: Makefile.am  fanotify-dfid-name.h  fanotify.h.in  inotify-nosys.h  inotifytools.h
libinotifytools/src/inotifytools/.svn/: all-wcprops  entries
libinotifytools/src/inotifytools/.svn/text-base/: inotify-nosys.h.svn-base  inotify.h.in.svn-base  inotifytools.h.svn-base
man/: Makefile.am  fsnotifywait.1.in  fsnotifywatch.1.in  inotifywait.1  inotifywait.1.in  inotifywatch.1.in
man/.svn/: all-wcprops  entries
man/.svn/text-base/: inotifywait.1.svn-base  inotifywatch.1.svn-base
src/: Makefile.am  common.c  common.cpp  common.h  inotifywait.c  inotifywait.cpp  inotifywatch.c  inotifywatch.cpp
src/.svn/: all-wcprops  entries
src/.svn/text-base/: common.c.svn-base  inotifywait.c.svn-base
t/: Makefile  aggregate-results.sh  fanotify-common.sh  fsnotifywait-errors.t  fsnotifywait-filesystems.t  fsnotifywait-mount.t  fsnotifywait-subtree.t  inotifywait-csv-watched-dir.t  inotifywait-csv-watched-file.t  inotifywait-daemon-logs-chown.t  inotifywait-daemon-logs-to-relative-paths.t  inotifywait-format-option-cookie-ready.t  inotifywait-format-option-cookie.t  inotifywait-format-option-null.t  inotifywait-format-watched-dir.t  inotifywait-format-watched-file.t  inotifywait-fromfile-stdin.t  inotifywait-no-dereference-ignore-symlinked-file.t  inotifywait-no-dereference-respond-to-symlink-event.t  inotifywait-no-event-occured.t  inotifywait-recursive-include.t  inotifywait-recursive-multiple-includes.t  sharness.sh
