[package]
name = "inotifywait"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wait for filesystem events using inotify"

[[bin]]
name = "inotifywait"
path = "src/main.rs"

[dependencies]
inotifytools = { path = "../inotifytools" }
clap.workspace = true
signal-hook.workspace = true
chrono.workspace = true
csv.workspace = true
regex.workspace = true
nix.workspace = true
libc.workspace = true